# stam-tools

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  codemeta-harvest.json
config/fromxml/: html.toml  pagexml.toml  tei.toml
config/translatetext/: lowercase.toml  norm.toml  uppercase.toml
docs/: fromxml.md  translatetext.md
src/: align.rs  annotate.rs  grep.rs  info.rs  lib.rs  main.rs  print.rs  query.rs  split.rs  tag.rs  to_text.rs  translate.rs  transpose.rs  tsv.rs  validate.rs  view.rs  xml.rs
tests/: Makefile  align2.txt  localalign1.txt  localalign2.txt  test.html  test.xml  test1.tsv  test2.annotationstore.stam.json  test2.tsv  test3.tsv  test4.annotationstore.stam.json  translatetext1.txt  translatetext2.txt
