[package]
name = "stam-tools"
version = "0.6.1"
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Command-line tools for working with stand-off annotations on text (STAM)"
documentation = "https://github.com/annotation/stam-tools"
homepage = "https://annotation.github.io/stam"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/annotation/stam-tools"
keywords = [ "text-processing", "annotation", "linguistics", "standoff", "nlp"]

[dependencies]
stam = { version = "0.12.0" }
clap = "3.2.23"
html-escape = "0.2.13"
seal = "0.1.5"
atty = "0.2.14"

[lib]
name = "stamtools"
path = "src/lib.rs"

[[bin]]
name = "stam"
path = "src/main.rs"
doc = false

